# mcp-dingtalk-doc

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE_TEMPLATE.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  __init__.py  mcp_config_example.json  package-lock.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  server.py
nodejs/: .gitignore  .npmignore  .npmrc  AUTO_LOGIN.md  AUTO_LOGIN_FLOW.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_CONFIG.md  GIT_SETUP.md  LICENSE  MCP_CONFIG_EXAMPLES.md  PROJECT_STATUS.md  PUBLISHING.md  PUBLISH_CHECKLIST.md  QUICK_START_PUBLISH.md  README.md  README_NPM_SETUP.md  configure-cursor.bat  package-lock.json  package.json  quick-start.bat  quick-start.sh  setup.bat  setup.sh  tsconfig.json
nodejs/scripts/: pre-publish-check.js
nodejs/src/: constants.ts  cookie-manager.ts  document-parser.ts  html-generator.ts  http-client.ts  index.ts  smart-cookie.ts  types.ts  utils.ts
python/: DEPLOYMENT.md  README.md  cookie_manager.py  pyproject.toml  requirements.txt  requirements_minimal.txt  server.py  setup_env.bat  setup_env.sh
