[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-dingtalk-doc"
version = "1.0.0"
description = "DingTalk Docs（钉钉文档）解析 MCP 服务器 - 支持文档内容提取与 HTML 生成（Model Context Protocol / Cursor MCP）"
authors = [
    {name = "黄云堃", email = "hykfft@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "mcp",
    "MCP",
    "model-context-protocol",
    "dingtalk",
    "DingTalk",
    "钉钉",
    "钉钉文档",
    "DingTalk Docs",
    "alidocs",
    "AliDocs",
    "document",
    "parser",
    "html"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "urllib3>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/hykfft/mcp-dingtalk-doc"
Documentation = "https://github.com/hykfft/mcp-dingtalk-doc#readme"
Repository = "https://github.com/hykfft/mcp-dingtalk-doc.git"

[project.scripts]
mcp-dingtalk-doc = "mcp_dingtalk_doc.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_dingtalk_doc"]

